kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: todolist-backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-backend
  labels:
    app: todolist-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-backend
  template:
    metadata:
      labels:
        app: todolist-backend
    spec:
      containers:
        - name: backend
          image: thybau/todolist-backend:1.0
          ports:
            - containerPort: 9000
