kubernetes/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: todolist-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-db
  labels:
    app: todolist-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-db
  template:
    metadata:
      labels:
        app: todolist-db
    spec:
      containers:
        - name: postgres
          image: thybau/todolist-db:1.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          emptyDir: {}  # Pour l'instant, pas de stockage persistant
