kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: todolist-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-frontend
  labels:
    app: todolist-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-frontend
  template:
    metadata:
      labels:
        app: todolist-frontend
    spec:
      containers:
        - name: frontend
          image: thybau/todolist-frontend:1.0
          ports:
            - containerPort: 80
